kernel/tests/data/invalid/family_not_a_type.ck
data Unit : Type where
  | mk : Unit

data Invalid : Unit.mk where